--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.17",
     "dayjs": "^1.11.19",
+    "eslint-plugin-react": "^7.37.5",
     "gsap": "^3.13.0",
     "lucide-react": "^0.556.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-tooltip": "^5.30.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
