--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "dayjs": "^1.11.19",
     "eslint-plugin-react": "^7.37.5",
     "gsap": "^3.13.0",
+    "immer": "^11.0.1",
     "lucide-react": "^0.556.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-tooltip": "^5.30.0",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
