--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.17",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
     "eslint-plugin-react": "^7.37.5",
     "gsap": "^3.13.0",
